// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Properly calculates output arrays Adds 1`] = `
Array [
  "lorem",
  "ipsum",
  "dolor",
  "sit",
]
`;

exports[`Properly calculates output arrays Adds at index 1`] = `
Array [
  "lorem",
  "ipsum",
  "sit",
  "dolor",
]
`;

exports[`Properly calculates output arrays Moves 1`] = `
Array [
  "ipsum",
  "lorem",
  "dolor",
]
`;

exports[`Properly calculates output arrays Removes 1`] = `
Array [
  "lorem",
  "dolor",
]
`;

exports[`Properly calculates output arrays Removes at index 1`] = `
Array [
  "lorem",
  "dolor",
]
`;

exports[`Properly calculates output arrays Toggles 1`] = `
Array [
  "ipsum",
  "dolor",
]
`;

exports[`Properly calculates output arrays Toggles 2`] = `
Array [
  "lorem",
  "ipsum",
  "dolor",
  "sit",
]
`;

exports[`Properly calculates output arrays Updates at index 1`] = `
Array [
  "lorem",
  "amet",
  "dolor",
]
`;
